# cantera-atmospheric-coupling

./: .gitignore  LICENSE  MANIFEST.in  README.md  alkanes.fac  farnesane.yaml  pyproject.toml  small.fac  sulfur.yaml  temp.py  verification.fac
cac/: __init__.py  aerosol.py  combustor.py  constants.py  cookstove.py  mechstats.py  merger.py  pytest.ini  rates.py  reactors.py  verification.py
cac/data/: A2NOx.yaml  atmosphere.yaml  combustor-c1c4.yaml  combustor-inorganic.yaml  combustor-min.yaml  combustor-molec.yaml  combustor-nox.yaml  combustor-nox_to_atmosphere.yaml  combustor-sulphur.yaml  combustor-test.yaml  combustor.yaml  combustor_to_atmosphere.yaml  combustor_to_fullmcm.yaml  complex-ambient.yaml  creck-jetfuel-ht-lt-nox.yaml  entrainment-rates.csv  entrainment_rates.csv  functional-groups.yaml  hydrogen.yaml  jetfuel.yaml  merged.yaml  sulfur.yaml  sulpher.txt  template.yaml
cac/data/alkanes/: alkanes-rates.txt  alkanes-reactions.txt  alkanes-reactions.yaml  alkanes-ro2-sum.txt  alkanes-species.txt  alkanes-species.yaml  alkanes_complex_rates.py
cac/data/all-models/: llnl-arom.yaml  nox-gri.yaml
cac/data/atmosphere/: atmosphere-generic.txt  atmosphere-reactions.txt  atmosphere-reactions.yaml  atmosphere-species.txt  atmosphere-species.yaml  atmosphere.fac  atmosphere.txt  atmosphere.yaml  atmosphere_complex_rates.py
cac/data/c1c4/: c1c4-rates.txt  c1c4-reactions.txt  c1c4-reactions.yaml  c1c4-ro2-sum.txt  c1c4-species.txt  c1c4-species.yaml  c1c4.fac  c1c4.yaml  c1c4_complex_rates.py  c1c4_rates.py
cac/data/creck/: creck-jetfuel-ht-lt-nox.cki  creck-jetfuel-ht-lt-nox.ckt  creck-propane-ht-nox.cki  creck-propane-ht-nox.ckt  creck-propane-ht-nox.yaml
cac/data/cri/: cri-rates.txt  cri-reactions.txt  cri-ro2-sum.txt  cri-species.txt  cri-species.yaml  cri.fac  cri_complex_rates.py
cac/data/farnesane/: farnesane.yaml
cac/data/farnesene/: farnesene.cki
cac/data/fuels/: creck-jetfuel.cki  creck-jetfuel.ckt  creck-propane.cki  creck-propane.ckt  creck-propane.yaml
cac/data/fullmcm/: fullmcm-generic.txt  fullmcm-rates.txt  fullmcm-reactions.yaml  fullmcm-ro2-sum.txt  fullmcm.fac  fullmcm_rates.py
cac/data/inorganic/: inorganic-rates.txt  inorganic-reactions.yaml  inorganic-species.txt  inorganic.fac  inorganic.yaml  inorganic_complex_rates.py
cac/data/jetfuel/: jetfuel-rates.txt  jetfuel-reactions.txt  jetfuel-reactions.yaml  jetfuel-ro2-sum.txt  jetfuel-species.txt  jetfuel-species.yaml  jetfuel.fac  jetfuel.yaml  jetfuel_complex_rates.py
cac/data/mcm/: mcm-reactions.txt  mcm.fac  (+5 more)
cac/extractor/: extractor.py  msearch.py  rate_extractor.py  reaction_extractor.py  section_extractor.py  species_extractor.py
cac/tests/: conftest.py  test_conversion.py  test_merger.py
jetfuel/: jetfuel-reactions.txt  jetfuel-ro2-sum.txt  jetfuel-species.txt  jetfuel-species.yaml
study/: batch.sh  cstudy.py  fill.sh  lowtol.sh  ncomp.sh  restarted.sh  round1.py  round2.py  run-jobs.sh  species.yaml  utils.py  water.sh
study/rmg/: input_rmg.py
(+91 files in other folders)
