[build-system]
requires = ["setuptools"]

[project]
name= "cac"
authors = [
    {name = "Anthony Walker", email = "walkanth@oregonstate.edu"}
]
description = "Cantera atmospheric coupling applications"
requires-python = ">=3.8"
dependencies = [
    "click",
    "sympy",
    "rdkit",
    "pubchempy",
    "numpy",
    "matplotlib",
    "pyyaml",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pep8",
]
dynamic = ["version"]

[project.scripts]
merger = "cac.merger:merge_commandline"
extractor = "cac.extractor.extractor:main"
combustor = "cac.combustor:run_combustor_atm_sim"
verify_box_model = "cac.verification:mixing_box_model_verification"
verify_braggs = "cac.verification:braggs_combustor_verification"

[project.urls]
repository = "https://github.com/anthony-walker/cantera-atmospheric-coupling"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "cac.constants.VERSION"}
