[build-system]
requires = ["setuptools"]

[project]
name= "cac"
authors = [
    {name = "Anthony Walker", email = "walkanth@oregonstate.edu"}
]
description = "Cantera atmospheric coupling applications"
requires-python = ">=3.8"
dependencies = [
    "click",
    "sympy",
    "rdkit",
    "pubchempy",
    "numpy",
    "matplotlib",
    "pyyaml",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pep8",
]
dynamic = ["version"]

[project.scripts]
merger = "cac.merger:merge_commandline"
add_nox = "cac.merger:nox_submechanism_merge"
map_models = "cac.merger:map_models"
extractor = "cac.extractor.extractor:main"
combustor = "cac.combustor:run_combustor_atm_sim"
verify_box_model = "cac.verification:mixing_box_model_verification"
verify_combustor = "cac.verification:combustor_verification"
verify_atmosphere = "cac.verification:mcm_verification"
verify_tester = "cac.verification:function_tester"

[project.urls]
repository = "https://github.com/anthony-walker/cantera-atmospheric-coupling"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = {attr = "cac.constants.VERSION"}
